Mocking service (#223)
The initial implementation of the helper Envoy sidecar and the mocking service.
