# development/testing/manifests/api.yaml
@@ -169,6 +169,215 @@ spec:
                       format: int32
           tags:
             - Todo
+      # Mocked
+      # In "responses" there are multiple examples
+      /mocked/multiple/{id}:
+        # Enable mocking with x-kusk
+        x-kusk:
+          mocking:
+            enabled: true
+        get:
+          responses:
+            '200':
+              description: 'Mocked ToDos'
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      title:
+                        type: string
+                        description: Description of what to do
+                      completed:
+                        type: boolean
+                      order:
+                        type: integer
+                        format: int32
+                      url:
+                        type: string
+                    required:
+                      - title
+                      - completed
+                      - order
+                      - url
+                  # This example is the must for the response body mocking
+                  examples:
+                    first:
+                      title: "Mocked title #1"
+                      completed: true
+                      order: 12
+                      url: "http://mockedURL.com"
+                    second:
+                      title: "Mocked title #2"
+                      completed: true
+                      order: 13
+                      url: "http://mockedURL.com"
+            '400':
+              description: Client error
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/endpoints.Errors'
+            '500':
+              description: Server error
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/endpoints.Errors'
+          summary: Shows a single Todo
+          parameters:
+            - name: id
+              in: path
+              schema:
+                type: integer
+              required: true
+          tags:
+            - Todo
+      # In "responses" here is only one example
+      /mocked/{id}:
+        # Enable mocking with x-kusk
+        x-kusk:
+          mocking:
+            enabled: true
+        get:
+          responses:
+            '200':
+              description: 'Mocked ToDos'
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      title:
+                        type: string
+                        description: Description of what to do
+                      completed:
+                        type: boolean
+                      order:
+                        type: integer
+                        format: int32
+                      url:
+                        type: string
+                    required:
+                      - title
+                      - completed
+                      - order
+                      - url
+                  # This example is the must for the response body mocking
+                  example:
+                    title: "Mocked title"
+                    completed: true
+                    order: 13
+                    url: "http://mockedURL.com"
+            '400':
+              description: Client error
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/endpoints.Errors'
+            '500':
+              description: Server error
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/endpoints.Errors'
+          summary: Shows a single Todo
+          parameters:
+            - name: id
+              in: path
+              schema:
+                type: integer
+              required: true
+          tags:
+            - Todo
+        delete:
+          responses:
+            # mocking should return simple 200 on delete
+            '200':
+              description: ''
+            '400':
+              description: Client error
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/endpoints.Errors'
+            '500':
+              description: Server error
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/endpoints.Errors'
+          summary: Deletes this Todo
+          parameters:
+            - name: id
+              in: path
+              schema:
+                type: integer
+              required: true
+          tags:
+            - Todo
+        patch:
+          # Disable mocking for this operation
+          x-kusk:
+            mocking:
+              enabled: false
+          responses:
+            '200':
+              description: ''
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      title:
+                        type: string
+                        description: Description of what to do
+                      completed:
+                        type: boolean
+                      order:
+                        type: integer
+                        format: int32
+                      url:
+                        type: string
+                    required:
+                      - title
+                      - completed
+                      - order
+                      - url
+            '400':
+              description: Client error
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/endpoints.Errors'
+            '500':
+              description: Server error
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/endpoints.Errors'
+          summary: Modifies this Todo
+          parameters:
+            - name: id
+              in: path
+              schema:
+                type: integer
+              required: true
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    title:
+                      type: string
+                    completed:
+                      type: boolean
+                    order:
+                      type: integer
+                      format: int32
+          tags:
+            - MockedTodo
       /todos:
         x-kusk:
           cors:
