# internal/controllers/config_manager.go
@@ -42,6 +42,9 @@ import (
 	"github.com/kubeshop/kusk-gateway/internal/envoy/manager"
 	"github.com/kubeshop/kusk-gateway/internal/spec"
 	"github.com/kubeshop/kusk-gateway/internal/validation"
+
+	helperManagement "github.com/kubeshop/kusk-gateway/internal/helper/management"
+	"github.com/kubeshop/kusk-gateway/internal/helper/mocking"
 )
 
 const (
@@ -52,13 +55,13 @@ const (
 // KubeEnvoyConfigManager manages all Envoy configurations parsing from CRDs
 type KubeEnvoyConfigManager struct {
 	client.Client
-	Scheme       *runtime.Scheme
-	EnvoyManager *manager.EnvoyConfigManager
-	Validator    *validation.Proxy
-	m            sync.Mutex
+	Scheme        *runtime.Scheme
+	EnvoyManager  *manager.EnvoyConfigManager
+	HelperManager *helperManagement.ConfigManager
+	Validator     *validation.Proxy
+	m             sync.Mutex
 
 	WatchedSecretsChan chan *v1.Secret
-
 	SecretToEnvoyFleet map[string]gateway.EnvoyFleetID
 }
 
@@ -80,6 +83,8 @@ func (c *KubeEnvoyConfigManager) UpdateConfiguration(ctx context.Context, fleetI
 	defer l.Info("Finished updating configuration", "fleet", fleetIDstr)
 
 	envoyConfig := config.New()
+
+	mockingConfig := mocking.NewMockConfig()
 	// fetch all APIs and Static Routes to rebuild Envoy configuration
 	l.Info("Getting APIs for the fleet", "fleet", fleetIDstr)
 
@@ -106,7 +111,7 @@ func (c *KubeEnvoyConfigManager) UpdateConfiguration(ctx context.Context, fleetI
 			return fmt.Errorf("failed to validate options: %w", err)
 		}
 
-		if err = UpdateConfigFromAPIOpts(envoyConfig, c.Validator, opts, apiSpec); err != nil {
+		if err = UpdateConfigFromAPIOpts(envoyConfig, mockingConfig, c.Validator, opts, apiSpec); err != nil {
 			return fmt.Errorf("failed to generate config: %w", err)
 		}
 		l.Info("API route configuration processed", "fleet", fleetIDstr, "api", api.Name)
@@ -219,11 +224,14 @@ func (c *KubeEnvoyConfigManager) UpdateConfiguration(ctx context.Context, fleetI
 		return fmt.Errorf("failed to generate snapshot: %w", err)
 	}
 
-	l.Info("Configuration snapshot generated for the fleet", "fleet", fleetIDstr)
+	l.Info("Configuration snapshot was generated for the fleet", "fleet", fleetIDstr)
+	// Helper config is applied first to make Helper ready for the new Envoy routes
+	c.HelperManager.ApplyNewFleetConfig(fleetIDstr, mockingConfig)
 	if err := c.EnvoyManager.ApplyNewFleetSnapshot(fleetIDstr, snapshot); err != nil {
 		l.Error(err, "Envoy configuration failed to apply", "fleet", fleetIDstr)
 		return fmt.Errorf("failed to apply snapshot: %w", err)
 	}
+
 	l.Info("Configuration snapshot deployed for the fleet", "fleet", fleetIDstr)
 	return nil
 }
